--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
   iptables:
     table: nat
     chain: POSTROUTING
-    out_interface: {{ nat_gateway_output_interface }}
+    out_interface: "{{ nat_gateway_output_interface }}"
     jump: MASQUERADE
 - name: Persist net.ipv4.ip_forward config
   lineinfile:
